--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -49,7 +49,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <iframe src="https://littlecaesarsnfl.com.mx/VOBO/assets/legales/aviso.html" width="96%" height="100%" style="border: none;"></iframe>
+                <iframe src="./assets/legales/aviso.html" width="96%" height="100%" style="border: none;"></iframe>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-bs-dismiss="modal">¡ENTENDIDO!</button>
@@ -69,7 +69,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <iframe src="https://littlecaesarsnfl.com.mx/VOBO/assets/legales/terminos.html" width="96%" height="100%" style="border: none;"></iframe>
+                <iframe src="./assets/legales/terminos.html" width="96%" height="100%" style="border: none;"></iframe>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-bs-dismiss="modal">¡ENTENDIDO!</button>
@@ -88,7 +88,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <iframe src="https://littlecaesarsnfl.com.mx/VOBO/assets/legales/bases.html" width="96%" height="100%" style="border: none;"></iframe>
+                <iframe src="./assets/legales/bases.html" width="96%" height="100%" style="border: none;"></iframe>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-bs-dismiss="modal">¡ENTENDIDO!</button>
