--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,7 +68,7 @@
 
     </div>
     <div class="flex-center">
-        <button type="button" class="button-naranja">REGÍSTRATE</button>
+        <button type="button" class="button-naranja" [routerLink]="['/registro']">REGÍSTRATE</button>
     </div>
 </section>
 <!--TERMINA SECCIÓN MECÁNICA-->
