--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -40,10 +40,11 @@
         <div id="menu" class="animate__animated animate__slideInLeft">
             <ul>
                 <li><a href="#">MECÁNICA</a></li>
-                <li><a href="#">REGISTRO</a></li>
+                <li><a [routerLink]="['/registro']">REGISTRO</a></li>
                 <li><a href="#">PREMIOS</a></li>
                 <li><a href="#">GANADORES</a></li>
-                <li><a href="#">INGRESA</a></li>
+                <li><a href="#">SALIR</a></li>
+                <li><a [routerLink]="['/registro']">INGRESA</a></li>
             </ul>
         </div>
     </div>
