--- a/src/app/pages/instrucciones/instrucciones.component.html
+++ b/src/app/pages/instrucciones/instrucciones.component.html
@@ -10,7 +10,7 @@
                 <h2>INSTRUCCIONES</h2>
                 <p>Intenta derrotar al acertijo respondiendo a <span>todas sus preguntas correctamente</span> en sus diferentes escenarios y <span>en el menor tiempo posible.</span></p>
                 <div class="cont-button-instrucciones">
-                    <button>COMENZAR TRIVIA</button>
+                    <button [routerLink]="['/juego']" >COMENZAR TRIVIA</button>
                 </div>
             </div>
         </div>
