Pagina Instrucciones, Juego y GameOver
Adición de las paginas:
* Instrucciones
*Juego
*Game Over

--- a/src/app/pages/game-over/game-over.component.html
+++ b/src/app/pages/game-over/game-over.component.html
@@ -1,3 +1,17 @@
 <app-header></app-header>
-<p>game-over works!</p>
+<section id="gameover">
+    <div class="vertical-center">
+        <div class="cont-instrucciones">
+            <div>
+                <h2>JUEGO TERMINADO</h2>
+                <h3>10/30</h3>
+                <img src="assets/images/dino-instrucciones.png" alt="...">
+                <div class="cont-button-instrucciones">
+                    <button [routerLink]="['/micuenta']">MI CUENTA</button>
+                </div>
+            </div>
+        </div>
+        <!---->
+    </div>
+</section>
 <app-footer></app-footer>
