--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
     <div>
         <img id="logoPromo" src="assets/images/fondo-logo.png" alt="..." width="100%">
     </div>
-    <div class="fondo-relativo">
+    <div class="fondo-relativo animate__animated animate__slideInLeft animate__slow">
         <img id="animado" src="assets/images/fondo-2.png" alt="..." width="100%">
     </div>
     <div class="fondo-relativo">
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <img id="velociraptor" src="assets/images/velociraptor.png" alt="...">
+    <img id="velociraptor" class="animate__animated animate__slideInLeft animate__delay-5s" src="assets/images/velociraptor.png" alt="...">
 
     <!--Carousel Bootstrap | Premios Finales-->
     <div id="carouselFinal" class="carousel slide" data-bs-ride="carousel">
