--- a/src/app/pages/juego/juego.component.html
+++ b/src/app/pages/juego/juego.component.html
@@ -1,3 +1,34 @@
 <app-header></app-header>
-<p>juego works!</p>
+<section id="juego">
+    <div class="half">
+        <div class="box-preguntas animate__animated animate__slideInLeft">
+            <div class="score">
+                <div>
+                    <img src="assets/images/dino.png" alt="dino">
+                    <h2 id="dinosauriosCapturados">15</h2>
+                </div>
+                <div>
+                    <img src="assets/images/reloj.png" alt="Reloj">
+                    <h2 id="time">01:05:23</h2>
+                </div>
+            </div>
+
+            <div class="lineaJuego"></div>
+
+            <div class="preguntas">
+                <h2>Columna que se encuentra en la Ciudad de México creada para conmemorar el centenario de la Independencia de México</h2>
+                <div class="cont-respuestas">
+                    <button type="button" class="btn-trivia">Ángel de la Independencia</button>
+                    <button type="button" class="btn-trivia">Torre Independencia</button>
+                    <button type="button" class="btn-trivia">Monumento a la Revolución</button>
+                    <button type="button" class="btn-trivia">Torre de Satélite</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="half">
+        <img src="assets/images/Mapa.png" alt="...">
+    </div>
+</section>
 <app-footer></app-footer>
