--- a/src/app/pages/game-over/game-over.component.html
+++ b/src/app/pages/game-over/game-over.component.html
@@ -4,7 +4,7 @@
         <div class="cont-instrucciones">
             <div>
                 <h2>JUEGO TERMINADO</h2>
-                <h3>10/30</h3>
+                <h3>{{correctas}}/{{preguntas}}</h3>
                 <img src="assets/images/dino-instrucciones.png" alt="...">
                 <div class="cont-button-instrucciones">
                     <button [routerLink]="['/micuenta']">MI CUENTA</button>
