--- a/src/app/pages/thankyou-page/thankyou-page.component.html
+++ b/src/app/pages/thankyou-page/thankyou-page.component.html
@@ -6,7 +6,7 @@
             <h2>GRACIAS POR <span>REGISTRATE</span></h2>
             <p>Recuerda registrar tu ticket de compra para validar tus puntos de juego</p>
             <div>
-                <button>IR A MI CUENTA</button>
+                <button [routerLink]="['/micuenta']">IR A MI CUENTA</button>
             </div>
         </div>
     </div>
