--- a/src/app/pages/juego/juego.component.html
+++ b/src/app/pages/juego/juego.component.html
@@ -5,23 +5,24 @@
             <div class="score">
                 <div>
                     <img src="assets/images/dino.png" alt="dino">
-                    <h2 id="dinosauriosCapturados">15</h2>
+                    <h2 id="dinosauriosCapturados">{{correctas}}-{{preguntacontestada}}</h2>
                 </div>
                 <div>
                     <img src="assets/images/reloj.png" alt="Reloj">
-                    <h2 id="time">01:05:23</h2>
+                    <h2 id="time"><cd-timer #basicTimer class="bootstrap-timer" format="hms" [autoStart]="true" [endTime]="30" (onComplete)="onComplete($event)" ></cd-timer></h2>
                 </div>
             </div>
 
             <div class="lineaJuego"></div>
 
             <div class="preguntas">
-                <h2>Columna que se encuentra en la Ciudad de México creada para conmemorar el centenario de la Independencia de México</h2>
+                <h2>{{preguntaMuestra.cPregunta}}</h2>
+                <div class="flex-center" *ngIf="!tiempoEspera"> <span><img src="assets/images/32x32.gif" height="50px" alt="cargando"></span></div>
                 <div class="cont-respuestas">
-                    <button type="button" class="btn-trivia">Ángel de la Independencia</button>
-                    <button type="button" class="btn-trivia">Torre Independencia</button>
-                    <button type="button" class="btn-trivia">Monumento a la Revolución</button>
-                    <button type="button" class="btn-trivia">Torre de Satélite</button>
+                    <button type="button" (click)="RespuestasFormulario(preguntaMuestra.cResp1)" class="btn-trivia">{{preguntaMuestra.cResp1}}</button>
+                    <button type="button" (click)="RespuestasFormulario(preguntaMuestra.cResp2)" class="btn-trivia">{{preguntaMuestra.cResp2}}</button>
+                    <button type="button" (click)="RespuestasFormulario(preguntaMuestra.cResp3)" class="btn-trivia">{{preguntaMuestra.cResp3}}</button>
+                    <button type="button" (click)="RespuestasFormulario(preguntaMuestra.cResp4)" class="btn-trivia">{{preguntaMuestra.cResp4}}</button>
                 </div>
             </div>
 
@@ -30,5 +31,6 @@
     <div class="half">
         <img src="assets/images/Mapa.png" alt="...">
     </div>
+
 </section>
 <app-footer></app-footer>
