--- a/src/app/pages/micuenta/micuenta.component.html
+++ b/src/app/pages/micuenta/micuenta.component.html
@@ -56,7 +56,7 @@
                     <tbody>
                         <tr *ngFor="let participacion of historial">
                             <td>{{participacion.cDia }}</td>
-                            <td>{{participacion.cCorrectas}}/30</td>
+                            <td>{{participacion.cCorrectas}}/{{participacion.cPreguntas}}</td>
                         </tr>
                         
                     </tbody>
