Ajustes Imagenes & Textos
+ Compresión de imagenes de fondo
+ Ajustes de Texto
+ Ajuste en Modal Video
+ Ajuste sección de registro (LogIn)

--- a/src/app/pages/escribe/escribe.component.html
+++ b/src/app/pages/escribe/escribe.component.html
@@ -6,12 +6,9 @@
 
         <div class="box">
             <h2><span>Escribe </span>una Historia</h2>
-            <p>¿Cuéntanos por qué eres fan de Jurassic World?</p>
+            <p>Cuéntanos; ¿Por qué eres fan de Jurassic World?</p>
             <form [formGroup]="historiaForm" (ngSubmit)="escribeHistoria()">
-                <textarea cols="50" rows="10" required name="historiaCuentanos" formControlName="historiaCuentanos"
-                                class="form-control"
-                                [class.is-invalid]="historiaForm.get('historiaCuentanos').invalid && historiaForm.get('historiaCuentanos').touched"
-                                [class.is-valid]="historiaForm.get('historiaCuentanos').valid && historiaForm.get('historiaCuentanos').touched">
+                <textarea cols="50" rows="10" required name="historiaCuentanos" formControlName="historiaCuentanos" class="form-control" [class.is-invalid]="historiaForm.get('historiaCuentanos').invalid && historiaForm.get('historiaCuentanos').touched" [class.is-valid]="historiaForm.get('historiaCuentanos').valid && historiaForm.get('historiaCuentanos').touched">
                 </textarea>
                 <span class="text-danger" *ngIf="isSubmitReg && historiaForm.get('historiaCuentanos').invalid">Debe proporcionar
                     una historia de por qué eres fan de Jurassic World.</span>
