--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
                 <img src="assets/images/icono-mecanica-2.png" alt="Icono-1">
             </div>
             <h4>REGISTRA</h4>
-            <p>Tu ticket de compra en este sitio web y cuéntanos ¿Cuéntanos por qué eres fan de Jurassic World?</p>
+            <p>Tu ticket de compra en este sitio web y cuéntanos ¿Por qué eres fan de Jurassic World?</p>
         </div>
 
         <div class="box-mecanica">
@@ -324,16 +324,17 @@
     <div class="modal-dialog">
         <div class="special-size modal-content">
             <div class="modal-header">
-                <button type="button" class="btn-close white-color" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closePopup()"></button>
             </div>
             <div class="modal-body">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/HQwE5QruhU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="videoIframe" width="100%" height="315" src="https://www.youtube.com/embed/HQwE5QruhU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" data-bs-dismiss="modal" (click)="closePopup()">Cerrar</button>
             </div>
         </div>
     </div>
+
 </div>
 <!-- TERMINA VIDEO JURASSIC-->
 
