--- a/src/app/pages/instrucciones/instrucciones.component.html
+++ b/src/app/pages/instrucciones/instrucciones.component.html
@@ -5,7 +5,7 @@
             <div>
                 <h2>INSTRUCCIONES</h2>
                 <img src="assets/images/dino-instrucciones.png" alt="...">
-                <p>Acumula dinosaurios por cada <span>respuesta correcta</span> de la trivia, tienes <span>3 minutos</span> por cada ticket registrado. Entre <span>más dinosaurios acumules</span>, tendrás más posibilidades de ganar.</p>
+                <p>Acumula dinosaurios por cada <span>respuesta correcta</span> de la trivia, tienes <span>30 segundos</span> por cada ticket registrado. Entre <span>más dinosaurios acumules</span>, tendrás más posibilidades de ganar.</p>
                 <div class="cont-button-instrucciones">
                     <button [routerLink]="['/juego']">COMENZAR TRIVIA</button>
                 </div>
