--- a/src/app/pages/thankyou-page/thankyou-page.component.html
+++ b/src/app/pages/thankyou-page/thankyou-page.component.html
@@ -3,7 +3,7 @@
     <div class="flex-center">
         <div class="cont-thankyou-page">
             <img src="assets/images/lc-party.png" alt="Little Caesars" width="250px">
-            <h2>GRACIAS POR <span>REGISTRATE</span></h2>
+            <h2>GRACIAS POR <span>REGISTRARTE</span></h2>
             <p>Recuerda registrar tu ticket de compra para validar tus puntos de juego</p>
             <div>
                 <button [routerLink]="['/micuenta']">IR A MI CUENTA</button>
