--- a/src/app/pages/juego/juego.component.html
+++ b/src/app/pages/juego/juego.component.html
@@ -5,7 +5,7 @@
             <div class="score">
                 <div>
                     <img src="assets/images/dino.png" alt="dino">
-                    <h2 id="dinosauriosCapturados">{{correctas}}-{{preguntacontestada}}</h2>
+                    <h2 id="dinosauriosCapturados">{{correctas}}</h2>
                 </div>
                 <div>
                     <img src="assets/images/reloj.png" alt="Reloj">
