--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -36,6 +36,14 @@
 
         <div class="box-mecanica">
             <div>
+                <img src="assets/images/icono-mecanica-5.png" alt="Icono-1">
+            </div>
+            <h4>CUÉNTANOS</h4>
+            <p>¿Por qué eres fan de Jurassic World?</p>
+        </div>
+
+        <div class="box-mecanica">
+            <div>
                 <img src="assets/images/icono-mecanica-1.png" alt="Icono-1">
             </div>
             <h4>COMPRA</h4>
@@ -47,7 +55,7 @@
                 <img src="assets/images/icono-mecanica-2.png" alt="Icono-1">
             </div>
             <h4>REGISTRA</h4>
-            <p>Tu ticket de compra en este sitio web y cuéntanos ¿Cuéntanos por qué eres fan de Jurassic World?</p>
+            <p>Tu ticket de compra en este sitio web</p>
         </div>
 
         <div class="box-mecanica">
@@ -324,7 +332,7 @@
     <div class="modal-dialog">
         <div class="special-size modal-content">
             <div class="modal-header">
-                <button type="button" class="btn-close white-color"  data-bs-dismiss="modal" (click)="closePopup()" aria-label="Close"></button>
+                <button type="button" class="btn-close white-color" data-bs-dismiss="modal" (click)="closePopup()" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <iframe width="100%" height="315" id="myVideoId" src="https://www.youtube.com/embed/HQwE5QruhU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
