--- a/src/app/pages/micuenta/micuenta.component.html
+++ b/src/app/pages/micuenta/micuenta.component.html
@@ -4,9 +4,9 @@
         <div class="box animate__animated animate__slideInRight animate__delay-1s">
             <div class="margin"></div>
             <h2>ESCRIBE <span>UNA HISTORIA</span></h2>
-            <p>¿Cuéntanos por qué eres fan de Jurassic World?</p>
+            <p>Recuerda que tienes una oportunidad de enviar tu historia, esta historia será con la que participarás para los premios finales.</p>
             <div class="flex-center">
-                <button type="button" class="button-naranja-black"  [routerLink]="['/escribe']" >ESCRIBIR HISTORIA</button>
+                <button type="button" class="button-naranja-black" [routerLink]="['/escribe']">ESCRIBIR HISTORIA</button>
             </div>
         </div>
     </div>
@@ -25,12 +25,12 @@
                         <label for="file-upload" class="subir">
                             <i class="fas fa-cloud-upload-alt"></i> SUBIR IMAGEN
                         </label>
-                        <input id="file-upload" data-bs-toggle="modal" data-bs-target="#SubeImagen" onchange='cambiar()'  style='display: none;' />
+                        <input id="file-upload" data-bs-toggle="modal" data-bs-target="#SubeImagen" onchange='cambiar()' style='display: none;' />
                         <div id="info" data-bs-toggle="modal" data-bs-target="#SubeImagen">{{nombreImagen}}</div>
                     </div>
                 </div>
                 <div class="flex-center">
-                    <input class="button-black btn-size-standar"  value="SUBIR IMAGÉN Y JUGAR">                    
+                    <input class="button-black btn-size-standar" value="SUBIR IMAGÉN Y JUGAR">
                 </div>
             </form>
         </div>
@@ -58,7 +58,7 @@
                             <td>{{participacion.cDia }}</td>
                             <td>{{participacion.cCorrectas}}/{{participacion.cPreguntas}}</td>
                         </tr>
-                        
+
                     </tbody>
                 </table>
             </div>
@@ -75,8 +75,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title fontLC" id="exampleModalLabel">SUBE TU TICKET</h5>
-                <button type="button" #closebutton class="btn-close" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
+                <button type="button" #closebutton class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body modal-body-upload">
 
