--- a/src/app/pages/micuenta/micuenta.component.html
+++ b/src/app/pages/micuenta/micuenta.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<section id="escribe-historia" *ngIf="!historial">
+<section id="escribe-historia" *ngIf="muestraHistoria">
     <div class="cont-flex">
         <div class="box animate__animated animate__slideInRight animate__delay-1s">
             <div class="margin"></div>
