--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
                 <img src="assets/images/icono-mecanica-1.png" alt="Icono-1">
             </div>
             <h4>COMPRA</h4>
-            <p>La pizza especial de Little Caesars® Jurassic World: Dominion</p>
+            <p>La <span class="underline">Jurassic Pizza</span> de Little Caesars®</p>
         </div>
 
         <div class="box-mecanica">
