--- a/src/app/pages/micuenta/micuenta.component.html
+++ b/src/app/pages/micuenta/micuenta.component.html
@@ -4,7 +4,7 @@
         <div class="box animate__animated animate__slideInRight animate__delay-1s">
             <div class="margin"></div>
             <h2>ESCRIBE <span>UNA HISTORIA</span></h2>
-            <p>Recuerda que tienes una oportunidad de enviar tu historia, esta historia será con la que participarás para los premios finales.</p>
+            <p class="texto-historia">Recuerda que tienes una oportunidad de enviar tu historia, esta historia será con la que participarás para los premios finales.</p>
             <div class="flex-center">
                 <button type="button" class="button-naranja-black" [routerLink]="['/escribe']">ESCRIBIR HISTORIA</button>
             </div>
