--- a/src/app/pages/micuenta/micuenta.component.html
+++ b/src/app/pages/micuenta/micuenta.component.html
@@ -29,9 +29,9 @@
                         <div id="info" data-bs-toggle="modal" data-bs-target="#SubeImagen">{{nombreImagen}}</div>
                     </div>
                 </div>
-                <div class="flex-center">
+                <!--<div class="flex-center">
                     <input class="button-black btn-size-standar" value="SUBIR IMAGÉN Y JUGAR">
-                </div>
+                </div>-->
             </form>
         </div>
     </div>
