--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -258,7 +258,7 @@
                 <div id="overflow">
 
                     <!--Comentar este codigo cuando tengamos lista de ganadores-->
-                    <table>
+                    <!-- <table>
                         <thead>
                             <tr>
                                 <th colspan="2" style="text-align: center; font-size: 40px;">PRÓXIMAMENTE</th>
@@ -267,7 +267,11 @@
                                 <th colspan="2" class="linea"></th>
                             </tr>
                         </thead>
-                    </table>
+                    </table> -->
+
+
+
+
 
                     <!--Descomentar este codigo cuando tengamos lista de ganadores-->
                     <!-- <table>
@@ -281,19 +285,23 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Arturo Ocampo Hernández</td>
+                                <td>...</td>
                                 <td>1° Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Jabneel Arturo Ocampo Astorga</td>
+                                <td>...</td>
                                 <td>2° Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Jose Antonio Bautista Lopez</td>
-                                <td>2° Lugar Semanal</td>
+                                <td>...</td>
+                                <td>3° Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>...</td>
+                                <td>4° Lugar Semanal</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
 
                     <table>
                         <thead>
@@ -306,15 +314,24 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Arturo Ocampo Hernández</td>
+                                <td>Jose Enrique Miramontes Medrano</td>
                                 <td>1° Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Jabneel Arturo Ocampo Astorga</td>
+                                <td>Jonathan Perez Gonzalez</td>
                                 <td>2° Lugar Semanal</td>
                             </tr>
+                            <tr>
+                                <td>José de Jesús Gutiérrez Ramírez</td>
+                                <td>3° Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Hector Isaac Gonzalez Avila</td>
+                                <td>4° Lugar Semanal</td>
+                            </tr>
                         </tbody>
-                    </table> -->
+                    </table>
+
                 </div>
 
 
