--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -277,7 +277,7 @@
                     <!-- <table>
                         <thead>
                             <tr>
-                                <th colspan="2">GANADORES SEMANA 2</th>
+                                <th colspan="2">GANADORES SEMANA 3</th>
                             </tr>
                             <tr>
                                 <th colspan="2" class="linea"></th>
@@ -303,6 +303,37 @@
                         </tbody>
                     </table> -->
 
+
+
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="2">GANADORES SEMANA 2</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Jonathan Ramos Islas</td>
+                                <td class="text-right">1° Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Laura Martinez Garcia</td>
+                                <td class="text-right">2° Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Luis Eduardo Martinon López</td>
+                                <td class="text-right">3° Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Ricardo Hernández Iza</td>
+                                <td class="text-right">4° Lugar Semanal</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                     <table>
                         <thead>
                             <tr>
@@ -315,19 +346,19 @@
                         <tbody>
                             <tr>
                                 <td>Jose Enrique Miramontes Medrano</td>
-                                <td>1° Lugar Semanal</td>
+                                <td class="text-right">1° Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Jonathan Perez Gonzalez</td>
-                                <td>2° Lugar Semanal</td>
+                                <td class="text-right">2° Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>José de Jesús Gutiérrez Ramírez</td>
-                                <td>3° Lugar Semanal</td>
+                                <td class="text-right">3° Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Hector Isaac Gonzalez Avila</td>
-                                <td>4° Lugar Semanal</td>
+                                <td class="text-right">4° Lugar Semanal</td>
                             </tr>
                         </tbody>
                     </table>
