--- a/src/assets/css/stylesLC-Batman.scss
+++ b/src/assets/css/stylesLC-Batman.scss
@@ -804,7 +804,7 @@ footer {
     width: 100%;
     height: 380px;
     /* CAMBIAR A SCROLL CUANDO LA LISTA DE GANADORES COMIENCE A DESCENDER */
-    overflow-y: none;
+    overflow-y: scroll;
     /*------*/
     padding-right: 20px;
 }
@@ -2352,4 +2352,8 @@ form {
     .texto-historia {
         font-size: 22px !important;
     }
+}
+
+.text-right {
+    text-align: right;
 }
