Ajustes Modal Video (Quitar)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -376,7 +376,7 @@
 <!-- TERMINA SECCIÓN DE GANADORES -->
 
 <!-- VIDEO JURASSIC-->
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
     <div class="modal-dialog">
         <div class="special-size modal-content">
             <div class="modal-header">
@@ -390,7 +390,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- TERMINA VIDEO JURASSIC-->
 
 <!--FOOTER-->
